# MADS-ML-WvanHuis-Deployment

straattaal/: .gitignore  README.md  docker-compose.yaml  pyproject.toml  slanggen.toml
straattaal/backend/: app.py  requirements.txt  utils.py
straattaal/backend/artefacts/: config.json  history.txt  model.pth  tokenizer.json
straattaal/backend/static/: index.html  styles.css
straattaal/src/slanggen/: custom_logger.py  datatools.py  main.py  models.py
